<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_ev3</name>
  <version>0.0.1</version>
  <description>Based on Josh Newans interface between diff_drive_controller and an Arduino https://github.com/joshnewans/diffdrive_arduino.</description>

  <maintainer email="grolleau@ensma.fr">Emmanuel Grolleau</maintainer>
  <author email="grolleau@ensma.fr"></author>
  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/diffdrive_arduino</url> -->


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_lifecyle</depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
